--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* latin */
-@font-face {
+@font-face 
+{
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
@@ -9,5 +10,167 @@
 
 body
 {
-    font-family:Raleway
+    font-family:Raleway;
+    background:url('../img/IMG_1473.JPG');
+    background-size: cover;
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;
+    background-attachment: fixed;
+    /* You may add things like width, height, background-size... */
+}
+
+.nav-link-red
+{
+    color:#bb0000 !important;
+    font-weight: bold;
+}
+
+.topbar
+{
+    margin-bottom: 10px;
+}
+
+.logo
+{
+    height:250px;
+    display: block;
+    margin: auto;
+    padding-top:10px;
+}
+
+.white
+{
+    background-color:#ffffff !important;
+}
+
+.main-content
+{
+    background-color: rgba(255,255,255,0.8) !important;
+    border-radius:6px !important;
+    border-color:gainsboro !important;
+    border-width:thin !important;
+    border-style: solid !important;
+}
+
+.centered
+{
+    text-align:center;
+}
+
+.padded
+{
+    padding: 30px !important;
+}
+
+.leftsidebar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 13%;
+    background-color: rgba(255,255,255,0.8);
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+    z-index:100;
+}
+
+.rightsidebar {
+    list-style-type: none;
+    margin: 0;
+    width: 16%;
+    background-color: rgba(255,255,255,0.8);
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+    z-index:100;
+    right:0px;
+}
+
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a.active {
+    background-color: #bb0000;
+    color: white;
+}
+
+li a:hover:not(.active) {
+    background-color: #888888;
+    color: white;
+}
+
+li a:visited{
+    color: black;
+}
+
+li.filler
+{
+    height: 275px;
+}
+
+.centerer
+{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+}
+
+.osulogo
+{
+    margin:auto; /* Required */
+    position:absolute; /* Required */
+    bottom:5px; /* Aligns at the bottom */
+    left:0;right:0; /* Aligns horizontal center */
+    max-height:100%; /* images bigger than 175 px  */
+    width:50%;  /* will be shrinked to size */ 
+}
+
+/* unvisited link */
+span a:link {
+    color:#bb0000;
+}
+
+/* visited link */
+span a:visited {
+    color:#bb0000;
+}
+
+/* mouse over link */
+span a:hover {
+    color:#bb2200;
+}
+
+/* selected link */
+span a:active {
+    color:#bb0000;
+}
+
+.padded {
+    padding:10px;
+}
+
+.btnred
+{
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+    border-color:white !important;
+    border-style:solid !important;
+    border-radius: 6px !important;
+    background-color: #bb0000 !important;
+}
+
+.btnred:hover
+{
+    background-color: #dd0000 !important;
+}
+
+.glyphicon-large
+{
+    font-size: 25px;
 }
