--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,9 @@ iframe {
     border-style: none;
     border-color: initial;
     border-image: initial;
+
+    /*background:none transparent !important;*/
+    background:inherit !important;
 }
 
 .calendar-frame
@@ -59,7 +62,7 @@ iframe {
 .main-content
 {
     background-color: rgba(255,255,255,0.8) !important;
-    border-radius:6px !important;
+    border-radius:12px !important;
     border-color:gainsboro !important;
     border-width:thin !important;
     border-style: solid !important;
@@ -72,7 +75,8 @@ iframe {
 
 .padded
 {
-    padding: 30px !important;
+    padding-left: 30px !important;
+    padding-right: 30px !important;
 }
 
 .leftsidebar {
@@ -186,4 +190,10 @@ span a:active {
 .glyphicon-large
 {
     font-size: 25px;
+}
+
+.jumbotron
+{
+    padding-top:12px !important;
+    padding-bottom:12px !important;
 }
