--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,16 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+h1
+{
+    color:#bb0000 !important;
+}
+
+.pad-left
+{
+    padding-left:5px;
+}
+
 body
 {
     font-family:Raleway;
@@ -59,10 +69,17 @@ iframe {
     background-color:#ffffff !important;
 }
 
+.black
+{
+    color:black !important;
+    font-size:50px !important;
+    text-align:center !important;
+}
+
 .main-content
 {
     background-color: rgba(255,255,255,0.8) !important;
-    border-radius:12px !important;
+    border-radius:6px !important;
     border-color:gainsboro !important;
     border-width:thin !important;
     border-style: solid !important;
