--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,59 @@
 h1
 {
     color:#bb0000 !important;
+    font-size: 50px !important;
 }
+
+h2
+{
+    color:#bb0000 !important;
+    font-size: 35px !important;
+}
+
+h4
+{
+    font-size: 20px;
+}
+
+div.col-padded ul li
+{
+    font-size: 15px;
+}
+
+.org-title
+{
+    font-size: 50px !important;
+}
+
+.col-padded
+{
+    padding-left:10px !important;
+    padding-right:10px !important;
+}
+
+.divider
+{
+  border: 0; 
+  height: 1px; 
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+
+}
+
+.education-colheading
+{
+    color:#666;
+    font-weight:bold;
+}
+
+.education-subheading
+{
+    color:black;
+
+}
+
 
 .pad-left
 {
@@ -69,10 +121,10 @@ iframe {
     background-color:#ffffff !important;
 }
 
-.black
+#findus
 {
     color:black !important;
-    font-size:50px !important;
+    font-size: 43px !important;
     text-align:center !important;
 }
 
@@ -122,7 +174,7 @@ iframe {
 
 a {
     color: #a00000;
-    text-decoration: none;s
+    text-decoration: none;
     font-weight:bold;
 }
 
@@ -131,26 +183,61 @@ li.nav a {
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
+  -webkit-transition: all .2s ease-out;
+     -moz-transition: all .2s ease-out;
+      -ms-transition: all .2s ease-out;
+       -o-transition: all .2s ease-out;
+          transition: all .2s ease-out;
 }
 
-li a.active {
+li.nav a.active {
     background-color: #bb0000;
     color: white;
+  -webkit-transition: all .2s ease-out;
+     -moz-transition: all .2s ease-out;
+      -ms-transition: all .2s ease-out;
+       -o-transition: all .2s ease-out;
+          transition: all .2s ease-out;
 }
 
-li a:hover:not(.active) {
+li.nav a:hover:not(.active) {
     background-color: #888888;
     color: white;
 }
 
-li a:visited{
+li.nav a:visited{
     color: black;
 }
+
 
 li.filler
 {
     height: 275px;
 }
+
+a.pretty-link {
+   color: #a00000;
+   text-decoration:none;
+   outline:0;
+  border-bottom: solid 1px transparent;
+  -webkit-transition: color .2s ease-out, border-bottom-color .2s ease-out;
+     -moz-transition: color .2s ease-out, border-bottom-color .2s ease-out;
+      -ms-transition: color .2s ease-out, border-bottom-color .2s ease-out;
+       -o-transition: color .2s ease-out, border-bottom-color .2s ease-out;
+          transition: color .2s ease-out, border-bottom-color .2s ease-out;
+}
+
+a.pretty-link:hover:not(.active) {
+   text-decoration: none;
+   color: #000;
+   border-bottom: solid 1px #a00000;
+}
+
+a.pretty-link:visited{
+   color: #a00000;
+}
+
+
 
 .centerer
 {
@@ -202,6 +289,11 @@ span a:active {
     border-style:solid !important;
     border-radius: 6px !important;
     background-color: #bb0000 !important;
+}
+
+#viewAllBtn
+{
+    font-size: 20px;
 }
 
 .btnred:hover
