--- a/css/animations.css
+++ b/css/animations.css
@@ -15,6 +15,10 @@ div.square {
     -webkit-animation-duration: 1s; /* Safari 4.0 - 8.0 */
     animation-name: topslide;
     animation-duration: 1s;
+
+       -moz-animation: topslide 1s; /* Firefox < 16 */
+        -ms-animation: topslide 1s; /* Internet Explorer */
+         -o-animation: topslide 1s; /* Opera < 12.1 */
 }
 
 .leftslide{
@@ -23,6 +27,11 @@ div.square {
     -webkit-animation-duration: 1.5s; /* Safari 4.0 - 8.0 */
     animation-name: leftslide;
     animation-duration: 1.5s;
+
+       -moz-animation: leftslide 1.5s; /* Firefox < 16 */
+        -ms-animation: leftslide 1.5s; /* Internet Explorer */
+         -o-animation: leftslide 1.5s; /* Opera < 12.1 */
+
     
 }
 
