--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,19 @@ h4
     font-size: 20px;
 }
 
+.awards-heading
+{
+    padding-left:5px;
+    color:gray;
+    font-weight:bold;
+}
+
+ul.awards-list li
+{
+    color:gray;
+    font-size: 18px;
+}
+
 div.col-padded ul li
 {
     font-size: 15px;
@@ -73,12 +86,12 @@ div.col-padded ul li
 body
 {
     font-family:Raleway;
-    background:url('../img/IMG_1473.JPG');
+    background:url('../img/bdaa_background.png');
     background-size: cover;
-    background-color: rgba(255,255,255,0.6);
-    background-blend-mode: lighten;
     background-attachment: fixed;
-    /* You may add things like width, height, background-size... */
+    /*background:url('../img/IMG_1473.JPG');
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;*/
 }
 
 iframe {
